# eggplant-sdk-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: SWEEP.md
examples/: approvals_bootstrap.rs  convert_merge_split.rs  positions.rs  quickstart.rs  redeem.rs  stream_order_books.rs  stream_user_fills.rs  sweep.rs
src/: approval.rs  auth.rs  book.rs  chain.rs  convert.rs  data.rs  error.rs  fee.rs  gamma.rs  lib.rs  redeem.rs  relayer.rs  sweep.rs
src/clob/: books.rs  mod.rs  poster.rs  signing.rs  tick.rs  types.rs
src/ws/: frames.rs  market.rs  mod.rs  user.rs  util.rs
tests/: live.rs
